# data-engineering-labs

./: .gitignore  README.md
infrastructure/gcp/: README.md  providers.tf
module1-data-ingestion/airbyte/: README.md  pyproject.toml
module1-data-ingestion/airbyte/app/: airbyte_client.py
module1-data-ingestion/airbyte/notebooks/: airbyte-sdk-demo.ipynb
module1-data-ingestion/airbyte/scripts/: airbyte-api-demo.py
module1-data-ingestion/airbyte/tests/: test_airbyte_client.py
module1-data-ingestion/airbyte/tests/cassettes/: airbyte_get_destination_200_bigquery.yaml  airbyte_get_destination_404.yaml  airbyte_get_destination_500.yaml  airbyte_get_source_200_rss.yaml  airbyte_get_source_404.yaml  airbyte_get_source_500.yaml  airbyte_list_connections.yaml
module1-data-ingestion/data-load-tool/: README.md  pyproject.toml
module1-data-ingestion/python-ingest/: Dockerfile  README.md  compose.yaml  datasets.yaml  pyproject.toml
module1-data-ingestion/python-ingest/app/: command.py  df_fetcher.py  df_repository.py  processor.py  schemas.py
module2-workflow-orchestration/airflow-2.x/: Dockerfile.CeleryExecutor  Dockerfile.LocalExecutor  README.md  compose.celery.yaml  compose.local.yaml  pyproject.toml
module2-workflow-orchestration/airflow-2.x/dags/operator-based/: fhv_csv_to_postgres.py  taxi_green_csv_to_postgres.py  taxi_yellow_csv_to_postgres.py  taxi_zones_csv_to_postgres.py
module2-workflow-orchestration/prefect/: README.md  compose.yaml
module4-analytics-engineering/bigquery/: Dockerfile  README.md  dbt_project.yml  pyproject.toml
module4-analytics-engineering/bigquery/macros/: resolve_destination_schema.sql
module4-analytics-engineering/bigquery/models/core/: dim_fhv_trips.sql  dim_taxi_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_monthly_zone_revenue.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql
module4-analytics-engineering/clickhouse/: Dockerfile  README.md  compose.yaml  dbt_project.yml  pyproject.toml
module4-analytics-engineering/clickhouse/macros/: resolve_destination_schema.sql
module4-analytics-engineering/clickhouse/models/core/: dim_fhv_trips.sql
module4-analytics-engineering/dataviz/metabase/: compose.yaml
module4-analytics-engineering/dataviz/superset/: README.md
module4-analytics-engineering/dataviz/superset/conf/: docker-bootstrap.sh
module4-analytics-engineering/dataviz/superset/conf/pythonpath_dev/: superset_config.py
module4-analytics-engineering/duckdb/: Dockerfile  README.md  dbt_project.yml  pyproject.toml
module4-analytics-engineering/duckdb/macros/: resolve_destination_schema.sql
module4-analytics-engineering/duckdb/models/core/: dim_fhv_trips.sql  dim_taxi_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql
module4-analytics-engineering/duckdb/models/staging/: sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
module4-analytics-engineering/postgres/: Dockerfile  README.md  compose.yaml  dbt_project.yml  pyproject.toml
module4-analytics-engineering/postgres/macros/: resolve_destination_schema.sql  resolve_payment_type_desc.sql
module4-analytics-engineering/postgres/models/core/: dim_taxi_trips.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_monthly_zone_revenue.sql  fct_taxi_trips_quarterly_revenue.sql
module4-analytics-engineering/redshift/: Dockerfile  README.md  dbt_project.yml  profiles.redshift-serverless.yml  profiles.redshift.yml  pyproject.toml
module4-analytics-engineering/redshift/macros/: resolve_destination_schema.sql
module4-analytics-engineering/redshift/models/staging/: sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
module4-analytics-engineering/visualization/metabase/: README.md  compose.yaml
module4-analytics-engineering/visualization/superset/: README.md  compose.yaml
module4-analytics-engineering/visualization/superset/conf/: docker-init.sh  requirements-local.txt
module5-batch-processing/: README.md  compose.spark-3.5-standalone.yaml  compose.spark-4.0-standalone.yaml  compose.spark-4.1-standalone.yaml  compose.spark-4.2-standalone.yaml  compose.spark-standalone.yaml  compose.yaml  fhv_zones_gcs.py  spark-3.5-standalone.conf  spark-4.0-standalone.conf  spark-4.1-standalone.conf  spark-4.2-standalone.conf  spark-standalone.conf
module5-batch-processing/notebooks/: pyspark_connect_dataframe-api_gcs.ipynb  pyspark_connect_sparksql_gcs.ipynb
module5-batch-processing/pyspark/: README.md  compose.yaml  pyproject.toml
module5-batch-processing/pyspark-3.x/: README.md  fhv_zones_gcs.py  pyproject.toml
module5-batch-processing/pyspark-4.x/: README.md  fhv_zones_gcs.py  pyproject.toml
module5-batch-processing/pyspark-4.x/notebooks/: pyspark_connect_dataframe-api_gcs.ipynb  pyspark_connect_sparksql_gcs.ipynb
module5-batch-processing/pyspark/notebooks/: pyspark_connect_dataframe-api_gcs.ipynb  pyspark_connect_sparksql_gcs.ipynb
module6-stream-processing/: README.md  compose.kraft-multi-broker.yaml  compose.kraft-single-broker.yaml  compose.redpanda.yaml  compose.zookeeper-multi-broker.yaml
module6-stream-processing/kotlin/: README.md  build.gradle.kts  compose.yaml  gradle.properties  settings.gradle.kts
module6-stream-processing/ksqldb/: README.md
