[build-system]
requires = [
    "hatchling>=1.27.0,<2.0",
]
build-backend = "hatchling.build"

[project]
name = "ntlcli"
version = "2.1"
description = "Headless CLI for processing the NYC TLC Dataset"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "typer>=0.15.3,<1.0",
    "polars>=1.29.0,<2.0",
    "pyarrow>=20.0.0,<21.0",
    "adbc-driver-manager>=1.6.0,<2.0",
    "adbc-driver-postgresql>=1.6.0,<2.0",
    "psycopg[binary]>=3.2.7,<4.0",
    "pandas>=2.2.3,<3.0",
    "sqlalchemy>=2.0.40,<3.0",
    "loguru>=0.7.3,<1.0",
    "hydra-core>=1.3.2,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
    "jupyterlab>=4.4.2",
]

[project.scripts]
ntlcli = "app.command:cli"

[tool.hatch.build.targets.wheel]
include = ["app/**"]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
