[build-system]
requires = [
    "hatchling>=1.27.0,<2.0",
]
build-backend = "hatchling.build"

[project]
name = "nyc-tlc-cli"
version = "2.2"
description = "Headless CLI for processing the NYC TLC Dataset"
readme = "README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    "typer>=0.21.1,<1.0",
    "polars>=1.37.1,<2.0",
    "pandas>=3.0.0,<4.0",
    "pyarrow>=23.0.0,<24.0",
    "adbc-driver-postgresql>=1.10.0,<2.0",
    "adbc-driver-manager>=1.10.0,<2.0",
    "psycopg[binary]>=3.3.2,<4.0",
    "sqlalchemy>=2.0.46,<3.0",
    "loguru>=0.7.3,<1.0",
    "python-box[yaml]>=7.0,<8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "jupyterlab>=4.5.3",
]

[project.scripts]
tlc = "app.command:cli"

[tool.hatch.build.targets.wheel]
include = ["app/**"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = false
preview = true  # unstable: enables 'hug_parens_with_braces_and_square_brackets' for compact StructType([...])

[tool.ruff.lint]
preview = true  # unstable: enables latest lint rules before stabilization
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax for newer Python)
    "B",    # flake8-bugbear (common bug patterns)
    "SIM",  # flake8-simplify (code simplification)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # allow imports not at top in notebooks
